create superuser, update urls, views, and static files

--- a/vinyl/main_app/templates/home.html
+++ b/vinyl/main_app/templates/home.html
@@ -1,4 +1,8 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+{% block content %}
 <h1>vinyl</h1>
+<div class="container">
+  <a href="{% url 'album-index' %}" class="btn back-btn">View All Albums</a>
+</div>
 
 {% endblock %}
