--- a/vinyl/main_app/static/css/base.css
+++ b/vinyl/main_app/static/css/base.css
@@ -1,3 +1,7 @@
 body {
-    background-color: rgb(175, 211, 212);
-  }
+  background-image: url(https://i1.wp.com/www.cbvinylrecordart.com/blog/wp-content/uploads/2015/06/classic-vinyl.gif?resize=500%2C281);
+  background-size: 100% 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
