--- a/vinyl/main_app/templates/albums/detail.html
+++ b/vinyl/main_app/templates/albums/detail.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>{{ album.title }}</title>
+    <link rel="stylesheet" href="{% static 'css/albums/album-detail.css' %}" />
   </head>
   <body>
     <div class="container">
@@ -13,14 +15,12 @@
           <p><strong>Artist:</strong> {{ album.artist }}</p>
           <p><strong>Release Year:</strong> {{ album.release_year }}</p>
           <p><strong>Description:</strong> {{ album.description }}</p>
-        </div>
-      </div>
-
-      <div class="actions">
-        <a href="{% url 'album_update' album.id %}" class="btn edit-btn">Edit Album</a>
+          <a href="{% url 'album_update' album.id %}" class="btn edit-btn">Edit Album</a>
         <form method="post" action="{% url 'album_delete' album.id %}" style="display: inline">
           {% csrf_token %}
           <button type="submit" class="btn delete-btn">Delete Album</button>
-        </form>
+        </div>
       </div>
     </div>
+  </body>
+</html>
