--- a/vinyl/main_app/templates/home.html
+++ b/vinyl/main_app/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>vinyl</h1>
 <div class="container">
-  <a href="{% url 'album-index' %}" class="btn back-btn">View All Albums</a>
+  <a href="{% url 'album_index' %}" class="btn back-btn">View All Albums</a>
 </div>
 
 {% endblock %}
