--- a/vinyl/main_app/static/css/index.css
+++ b/vinyl/main_app/static/css/index.css
@@ -1,5 +1,6 @@
 body {
     font-family: Arial, sans-serif;
+    background-color: #000000;
   }
   
   .container {
@@ -40,14 +41,17 @@ body {
   }
   
   .btn.create-btn {
-    display: inline-block;
-    margin: 20px auto;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    text-align: center;
+   
+      display: inline-block;
+      padding: 10px 20px;
+      margin-top: 10px;
+      text-decoration: none;
+      color: #fff;
+      border-radius: 5px;
+      text-align: center;
+      cursor: pointer;
+      background-color: #0056b3;
+  
   }
   
   .btn.create-btn:hover {
