--- a/vinyl/main_app/static/css/form.css
+++ b/vinyl/main_app/static/css/form.css
@@ -1,39 +1,106 @@
+body {
+  background-color: black;
+  color: white;
+  font-family: "Righteous", sans-serif;
+}
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.navbar-left {
+  flex: 1;
+}
+
+.navbar-right {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.navbar a {
+  margin: 0 10px;
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+}
+
+.navbar a:hover {
+  color: red;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 200px;
+}
+
 .form-container {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  align-items: center;
+  background-color: #222;
+  padding: 20px;
+  border-radius: 8px;
+  width: 90%;
+  max-width: 600px;
 }
 
 table {
-  padding: 0 40px;
   width: 100%;
   border-spacing: 0 20px;
 }
 
-th {
+th,
+td {
   text-align: left;
-  padding: 6px 20px 0 0;
+  padding: 10px;
+}
+
+th {
   font-weight: normal;
   vertical-align: top;
-  font-size: var(--font-reg);
+  font-family: "Roboto", sans-serif;
+  font-size: 20x;
+  color: #ffffff;
 }
 
-td {
-  max-width: 60%;
+td input,
+td textarea,
+td select {
+  width: calc(100% - 20px);
+  padding: 10px;
+  border: 1px solid #555;
+  border-radius: 5px;
+  background-color: #333;
+  color: white;
+  font-size: 16px;
 }
 
-td > * {
-  width: 100%;
-  padding: 2px 4px;
-  font-size: var(--font-l);
-}
-
-td > textarea {
-  height: calc(4 * var(--font-l) + 8px);
-  font-family: inherit;
+td input:focus,
+td textarea:focus,
+td select:focus {
+  border-color: #888;
+  outline: none;
 }
 
 .btn {
-  align-self: flex-end;
-  margin-right: 40px;
+  padding: 10px 20px;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 18px;
+  cursor: pointer;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background-color: gray;
+}
+
+.btn:hover {
+  background-color: red;
 }
