--- a/vinyl/main_app/static/css/index.css
+++ b/vinyl/main_app/static/css/index.css
@@ -1,59 +1,77 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #000000;
-  }
-  
-  .container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 20px;
-  }
-  
-  .album-list {
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  .album-item {
-    margin: 15px;
-  }
-  
-  .album-cover {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 400px;
-    height: 400px;
-  }
-  
-  .album-cover img {
-    max-width: 100%;
-    max-height: 100%;
-    display: block;
-    border-radius: 10px;
-  }
-  
-  .btn.create-btn {
-   
-      display: inline-block;
-      padding: 10px 20px;
-      margin-top: 10px;
-      text-decoration: none;
-      color: #fff;
-      border-radius: 5px;
-      text-align: center;
-      cursor: pointer;
-      background-color: #0056b3;
-  
-  }
-  
-  .btn.create-btn:hover {
-    background-color: #0056b3;
-  }
+  font-family: "Righteous", sans-serif;
+  background-color: black;
+  font-size: 20px;
+  color: white;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+.navbar-left {
+  flex: 1;
+}
+
+.navbar-right {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.navbar a {
+  margin: 0 10px;
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  font-family: "Righteous", sans-serif;
+}
+
+.navbar a:hover {
+  color: red;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  flex-direction: column;
+}
+
+.album-list {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.album-item {
+  margin: 15px;
+}
+
+.album-item img {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  display: block;
+  width: 300px;
+  height: 300px;
+}
+
+.center-message {
+  font-size: 24px;
+  text-align: center;
+  margin-top: 50px;
+  font-family: "Roboto", sans-serif;
+}
+
+.no-albums-gif {
+  max-width: 100%;
+  height: auto;
+  margin-top: 20px;
+  border-radius: 5px;
+}
